successful add new user, need to deal with data

--- a/templates/add_new.html
+++ b/templates/add_new.html
@@ -17,21 +17,11 @@
     <section class="u-clearfix u-section-1" id="sec-7c60">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-form u-form-1">
-          <form action="/addNew" method="post" name="info_form" style="padding: 10px;">
-            <div class="u-form-group u-form-name">
-              <label for="name-e634" class="u-label">Name</label>
-              <input type="text" placeholder="" id="name-e634" name="name" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
-            </div>
-            <div class="u-form-email u-form-group">
-              <label for="email-e634" class="u-label">Email</label>
-              <input type="email" placeholder="" id="email-e634" name="email" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
-            </div>
-            <div class="u-form-group u-form-group-3">
-              <label for="text-e585" class="u-label">Telephone</label>
-              <input type="text" placeholder="" id="tel-e585" name="tel" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
-            </div>
-            <button type="submit">Submit</button>
-          </form>
+          <p class="u-text u-text-default u-text-1">In this page, you are going to add a new user.<br>
+            Use the url as the following format:<br>
+            /addNew/"yourName"/"yourEmail"/"yourPhone"<br>
+            Then hit enter.
+          </p>
         </div>
       </div>
     </section>
