structure for search

--- a/templates/search.html
+++ b/templates/search.html
@@ -5,19 +5,24 @@
     <meta name="keywords" content="User Information Management Service">
     <meta name="description" content="">
     <title>Home</title>
-
+    <meta name="generator" content="Nicepage 5.5.0, nicepage.com">
+    <meta name="referrer" content="origin">
     <meta name="theme-color" content="#478ac9">
+    <meta property="og:title" content="Home">
+    <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-lang="en"><header class="u-clearfix u-header u-header" id="sec-fd8e"><div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-1">User Information Management Service</h2>
+        <h3 class="u-align-center u-text u-text-default u-text-1">search</h3>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-7c60">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-text u-text-default u-text-1">Welcome to the service.<br>Click "Add New User" if you first come to our website and store you user information.<br>Click "Search" if you want to look for someone. Enjoy!
-        </p>
-        <a href="/addNew" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-6 u-btn-1">Add New User</a>
-        <a href="/search" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-6 u-btn-1">Search</a>
-        </a>
+        <div class="u-form u-form-1">
+          <p class="u-text u-text-default u-text-1">In this page, you can search for a user<br>
+            Use the url as the following format:<br>
+            /search/"name"<br>
+            Then hit enter.
+          </p>
+        </div>
       </div>
     </section>
   
